@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'com.github.tylerspaeth'
@@ -13,14 +12,19 @@ java {
     }
 }
 
-application {
-    mainClass = 'com.github.tylerspaeth.Main'
-    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics', "--sun-misc-unsafe-memory-access=allow"]
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.github.tylerspaeth.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-javafx {
-    version = '25'
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+application {
+    mainClass = 'com.github.tylerspaeth.Main'
+    applicationDefaultJvmArgs = ["--sun-misc-unsafe-memory-access=allow"]
 }
 
 repositories {
@@ -42,6 +46,7 @@ dependencies {
     annotationProcessor "org.hibernate:hibernate-jpamodelgen:6.3.0.Final"
 
     implementation 'org.reflections:reflections:0.10.2'
+    implementation 'com.googlecode.lanterna:lanterna:3.1.2'
 
     // Junit
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
